sublime-gulp.log
Remember that you can report errors and get help in https://github.com/NicoSantangelo/sublime-gulp

07-18-2016 23:22:
C:\1Design\My_template\.sublime-gulp-tmp.js:14
};
^
SyntaxError: missing ) after argument list
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:511:25)
    at Object.Module._extensions..js (module.js:550:10)
    at Module.load (module.js:456:32)
    at tryModuleLoad (module.js:415:12)
    at Function.Module._load (module.js:407:3)
    at Module.require (module.js:466:17)
    at require (internal/module.js:20:19)
    at requireGulp (C:\Users\nikstorm\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\nikstorm\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:83:12)


08-13-2016 12:53:
(node:6160) fs: re-evaluating native module sources is not supported. If you are using the graceful-fs module, please update it to a more recent version.
